--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
   <title>Personal Portfolio Webpage</title>
 </head>
 <body>
-  <div>
-    <p class="header-name">
-      Amirul Hakim
-    </p>
-  </div>
   <header class="header">
     <div>
       <nav id="navbar">
@@ -58,11 +53,21 @@
   <p class="contact-title">Let's work together...</p>
   <p class="contact-subtitle">here's how to reach me</p>
   <section id="contact">
-    <a href="https://github.com/hhhakimm" id="profile-link" target="_blank"><i class="bi bi-github"></i>Github</a>
-    <a href="https://stackoverflow.com/users/16598102/amirul-hakim-bin-baharizam" class="profile-link" target="_blank"><i class="bi bi-stack-overflow"></i>stackoverflow</a>
-    <a href="https://www.linkedin.com/in/amirul-hakim-b-3958311bb/" class="profile-link" target="_blank"><i class="bi bi-linkedin"></i>Linkedin</a>
-    <a href="" class="profile-link flip" target="_blank"><i class="bi bi-envelope-at"></i>Send a mail</a>
-    <a href="" class="profile-link flip" target="_blank"><i class="bi bi-telephone"></i>Call me</a>
+    <div class="contacts-container">
+      <a href="https://github.com/hhhakimm" id="profile-link" target="_blank"><i class="bi bi-github"></i>Github</a>
+    </div>  
+    <div class="contacts-container">
+      <a href="https://stackoverflow.com/users/16598102/amirul-hakim-bin-baharizam" class="profile-link" target="_blank"><i class="bi bi-stack-overflow"></i>stackoverflow</a>
+    </div>  
+    <div class="contacts-container">
+      <a href="https://www.linkedin.com/in/amirul-hakim-b-3958311bb/" class="profile-link" target="_blank"><i class="bi bi-linkedin"></i>Linkedin</a>
+    </div>  
+    <div class="contacts-container">
+      <a href="" class="profile-link flip" target="_blank"><i class="bi bi-envelope-at"></i>Send a mail</a>
+    </div>  
+    <div class="contacts-container">
+      <a href="" class="profile-link flip" target="_blank"><i class="bi bi-telephone"></i>Call me</a>
+    </div>  
   </section>
 </body>
 </html>
